2011-10-26  Kirit Saelensminde  <kirit@felspar.com>
 Allow an authentication request to be passed on to another auth service elsewhere.

2011-10-20  Kirit Saelensminde  <kirit@felspar.com>
 Added a remote authentication capability that allows a remote authentication/authorization service to be used for local authentication.

2011-10-16  Kirit Saelensminde  <kirit@felspar.com>
 Added in the ability to handle multiple services spread across multiple Django projects.

2011-09-06  Kirit Saelensminde  <kirit@felspar.com>
 Added a User operation that allows permissions to be checked.

2011-08-27  Kirit Saelensminde  <kirit@felspar.com>
 Added an instance cache together with some cache flushing middleware. This should improve the efficiency of the cache and reduce the number of requests to fetch objects from the back end.

2011-08-25  Kirit Saelensminde  <kirit@felspar.com>
 We are now able to authenticate Django Users.

2011-08-22  Kirit Saelensminde  <kirit@felspar.com>
 Added a delete operation for instances.

2011-08-10  Kirit Saelensminde  <kirit@felspar.com>
 The type of the returned instances in the client from `get` now makes sense.

2011-08-08  Kirit Saelensminde  <kirit@felspar.com>
 Added a server side implementation for updating instances.
 The model `get` method can now be passed any unique combination of attributes and the right instance will be returned.

2011-08-05  Kirit Saelensminde  <kirit@felspar.com>
 The server operations can now implement either `operation` or the HTTP method that they need to execute with. Unsupported methods will return a 403.
 Refactored the layout of the operations.

2011-07-28  Kirit Saelensminde  <kirit@felspar.com>
 Added some simple mocking capability so that client code that uses Slumber can be tested.

2011-07-27  Kirit Saelensminde  <kirit@felspar.com>
 The Slumber client now includes (more or less) full support for the object graph structure.

2011-07-22  juacompe  <juacompe@squire.proteus-tech.com>